--- a/desenvolupament-appweb.html
+++ b/desenvolupament-appweb.html
@@ -30,7 +30,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="implantació-de-projectes-exelerarning.html"/>
+<link rel="prev" href="implantació-de-projectes-exelearning.html"/>
 <link rel="next" href="remodelat-de-la-fulla-web-de-espacio-inestable.html"/>
 <script src="assets/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
@@ -174,7 +174,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="3.4" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#installació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> Instal·lació d’un repositori en el centre<span></span></a></li>
 <li class="chapter" data-level="3.5" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#possible-implantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> Possible implantació en el repositori en internet<span></span></a></li>
-<li class="chapter" data-level="3.6" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#explorar-wikimedia-per-a-la-realització-descriptura-collaborativa"><i class="fa fa-check"></i><b>3.6</b> Explorar wikimedia per a la realització d’escriptura col·laborativa<span></span></a></li>
+<li class="chapter" data-level="3.6" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#explorar-obsidian"><i class="fa fa-check"></i><b>3.6</b> Explorar <span>Obsidian</span><span></span></a></li>
+<li class="chapter" data-level="3.7" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#explorar-wikimedia-per-a-la-realització-descriptura-collaborativa"><i class="fa fa-check"></i><b>3.7</b> Explorar Wikimedia per a la realització d’escriptura col·laborativa<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html"><i class="fa fa-check"></i><b>4</b> Migració de les fulles web a Hugo<span></span></a>
 <ul>
@@ -186,18 +187,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.3" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#organització-dels-diferents-apartats-de-les-fulles"><i class="fa fa-check"></i><b>4.3</b> Organització dels diferents apartats de les fulles<span></span></a></li>
 <li class="chapter" data-level="4.4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#alternativa-merege-wordpress"><i class="fa fa-check"></i><b>4.4</b> Alternativa, merege WordPress<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html"><i class="fa fa-check"></i><b>5</b> Implantació de projectes exelerarning<span></span></a>
+<li class="chapter" data-level="5" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html"><i class="fa fa-check"></i><b>5</b> Implantació de projectes Exelearning<span></span></a>
 <ul>
-<li class="chapter" data-level="5.1" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#proposta-dimplantar-donar-cursos-en-la-sala-o-patrocinats-per-la-mateixa"><i class="fa fa-check"></i><b>5.1</b> Proposta d’implantar donar cursos en la sala o patrocinats per la mateixa<span></span></a></li>
-<li class="chapter" data-level="5.2" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#funcionament-dexelearning"><i class="fa fa-check"></i><b>5.2</b> Funcionament d’exelearning<span></span></a>
+<li class="chapter" data-level="5.1" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#proposta-dimplantar-donar-cursos-en-la-sala-o-patrocinats-per-la-mateixa"><i class="fa fa-check"></i><b>5.1</b> Proposta d’implantar donar cursos en la sala o patrocinats per la mateixa<span></span></a></li>
+<li class="chapter" data-level="5.2" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#funcionament-dexelearning"><i class="fa fa-check"></i><b>5.2</b> Funcionament d’exelearning<span></span></a>
 <ul>
-<li class="chapter" data-level="5.2.1" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#llocs-on-podem-penjar-el-material-educatiu"><i class="fa fa-check"></i><b>5.2.1</b> Llocs on podem penjar el material educatiu<span></span></a></li>
+<li class="chapter" data-level="5.2.1" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#llocs-on-podem-penjar-el-material-educatiu"><i class="fa fa-check"></i><b>5.2.1</b> Llocs on podem penjar el material educatiu<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="5.3" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#possible-implantació-duna-plataforma-moodle"><i class="fa fa-check"></i><b>5.3</b> Possible implantació d’una plataforma Moodle<span></span></a></li>
+<li class="chapter" data-level="5.3" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#possible-implantació-duna-plataforma-moodle"><i class="fa fa-check"></i><b>5.3</b> Possible implantació d’una plataforma Moodle<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html"><i class="fa fa-check"></i><b>6</b> Desenvolupament Appweb<span></span></a>
 <ul>
-<li class="chapter" data-level="6.1" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html#desenvolupament-duna-app-de-gestió-dinformes-de-la-sala."><i class="fa fa-check"></i><b>6.1</b> Desenvolupament d’una app de gestió d’informes de la sala.<span></span></a>
+<li class="chapter" data-level="6.1" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html#desenvolupament-duna-app-de-gestió-dinformes-de-la-sala"><i class="fa fa-check"></i><b>6.1</b> Desenvolupament d’una app de gestió d’informes de la sala<span></span></a>
 <ul>
 <li class="chapter" data-level="6.1.1" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html#alternatives"><i class="fa fa-check"></i><b>6.1.1</b> Alternatives<span></span></a></li>
 </ul></li>
@@ -206,7 +207,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html"><i class="fa fa-check"></i><b>7</b> Remodelat de la fulla web de <em>Espacio Inestable</em><span></span></a>
 <ul>
 <li class="chapter" data-level="7.1" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#reformulació-de-les-estratègies-de-venda-dentrades"><i class="fa fa-check"></i><b>7.1</b> Reformulació de les estratègies de venda d’entrades<span></span></a></li>
-<li class="chapter" data-level="7.2" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-de-pugin-de-venda-dentrades-i-tema-per-a-la-fulla-web"><i class="fa fa-check"></i><b>7.2</b> Instal·lació de pugin de venda d’entrades i tema per a la fulla web<span></span></a></li>
+<li class="chapter" data-level="7.2" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-del-plugin-de-venda-dentrades-i-tema-per-a-la-fulla-web"><i class="fa fa-check"></i><b>7.2</b> Instal·lació del plugin de venda d’entrades i tema per a la fulla web<span></span></a></li>
 <li class="chapter" data-level="7.3" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#tasques-a-fer"><i class="fa fa-check"></i><b>7.3</b> Tasques a fer<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="configuració-del-servidor.html"><a href="configuració-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configuració del servidor<span></span></a>
@@ -236,24 +237,24 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="desenvolupament-appweb" class="section level1 hasAnchor" number="6">
 <h1><span class="header-section-number">Projecte 6</span> Desenvolupament Appweb<a href="desenvolupament-appweb.html#desenvolupament-appweb" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p><em>L’empresa vol personaltzar informes per a la seua comptabilitat i la demanda de subvencions, on es reflectiran el nombre d’obres, espectadors, gasto, i fer estadístiques de l’assistència de públic i comparar en Google analític</em>.</p>
-<div id="desenvolupament-duna-app-de-gestió-dinformes-de-la-sala." class="section level2 hasAnchor" number="6.1">
-<h2><span class="header-section-number">6.1</span> Desenvolupament d’una app de gestió d’informes de la sala.<a href="desenvolupament-appweb.html#desenvolupament-duna-app-de-gestió-dinformes-de-la-sala." class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p><em>L’empresa vol personalitzar informes per a la seua comptabilitat i la demanda de subvencions, on es reflectiran el nombre d’obres, espectadors, gasto, i fer estadístiques de l’assistència de públic i comparar en Google analític</em>.</p>
+<div id="desenvolupament-duna-app-de-gestió-dinformes-de-la-sala" class="section level2 hasAnchor" number="6.1">
+<h2><span class="header-section-number">6.1</span> Desenvolupament d’una app de gestió d’informes de la sala<a href="desenvolupament-appweb.html#desenvolupament-duna-app-de-gestió-dinformes-de-la-sala" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><em>Es proposa la realització d’una appweb que realitze aquestes tasque.</em></p>
 <p>En principi, seria mitjançant una base de dades, on introduir els valors que recopile l’empesa, i un entorn web on es puguen fer consultes i redactar informes.</p>
 <blockquote>
-<p>Pendent de resoldre, la conveniència o no de la utilització d’una base de dades, una SQLite o un fitxer json, ja que el nombre de dades no es massa elevat.<br />
+<p>Pendent de resoldre, la conveniència o no de la utilització d’una base de dades, una SQLite o un fitxer json, ja que el nombre de dades no és massa elevat.<br />
 Investigar com es fan aquestes coses, ja que jo soc de xarxes, no de programació.</p>
 </blockquote>
 <p>L’app es colgaria en el servidor de l’empresa, perquè es puguen fer consultes des d’allí.
 El que implica la configuració d’un servidor en la mateixa sala, on de pas posarem un servidor de dns, un de fulles web si es vol realitzar interaccions amb el públic, optatiu un de correu, i es podria imantar també un servidor git, per fer les còpies de seguretat i seguiment de versions, dels projectes com la revista que publiquen o obres de teatre, en el cas que les vulguen crear de forma col·laborativa.</p>
-<p>Després de provar diverses alternatives, com <a href="https://about.gitlab.com/">gitlab</a> , <a href="https://gogs.io/">Gogs</a>, la millor alternativa pareix ser <a href="https://gitea.io/en-us/">Gitea</a>, és molt lleuger, es pot instal·lar amb una base de dades SQLite, i l’entorn web que proporciona es molt paregut al de github, i les exigències de l’empresa, no són les d’un entorn de programació.</p>
-<p>La millor opció per aquest cas és traure un compte de github de l’empesa, on es guarden els projectes.</p>
+<p>Després de provar diverses alternatives, com <a href="https://about.gitlab.com/">gitlab</a>, <a href="https://gogs.io/">Gogs</a>, la millor alternativa pareix ser <a href="https://gitea.io/en-us/">Gitea</a>, és molt lleuger, es pot instal·lar amb una base de dades SQLite, i l’entorn web que proporciona és molt paregut al de Github, i les exigències de l’empresa, no són les d’un entorn de programació.</p>
+<p>La millor opció per aquest cas és traure un compte de GitHub de l’empesa, on es guarden els projectes.</p>
 <div id="alternatives" class="section level3 hasAnchor" number="6.1.1">
 <h3><span class="header-section-number">6.1.1</span> Alternatives<a href="desenvolupament-appweb.html#alternatives" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <ul>
 <li>El projecte es pot realitzar en node.js, express i vue.js</li>
-<li><a href="https://www.r-project.org/">R</a> i <a href="https://shiny.rstudio.com/">shiny</a>, que pareix més fàcil, el que implica l’instal·lacio de R en el servidor, perquè ens servisca l’aplicació.</li>
+<li><a href="https://www.r-project.org/">R</a> i <a href="https://shiny.rstudio.com/">shiny</a>, que pareix més fàcil, el que implica la instal·lació de R en el servidor, perquè ens servisca l’aplicació.</li>
 </ul>
 </div>
 </div>
@@ -272,7 +273,7 @@ El que implica la configuració d’un servidor en la mateixa sala, on de pas po
           </div>
         </div>
       </div>
-<a href="implantació-de-projectes-exelerarning.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="implantació-de-projectes-exelearning.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="remodelat-de-la-fulla-web-de-espacio-inestable.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
