--- a/implantació-dentorn-git.html
+++ b/implantació-dentorn-git.html
@@ -174,7 +174,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="3.4" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#installació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> Instal·lació d’un repositori en el centre<span></span></a></li>
 <li class="chapter" data-level="3.5" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#possible-implantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> Possible implantació en el repositori en internet<span></span></a></li>
-<li class="chapter" data-level="3.6" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#explorar-wikimedia-per-a-la-realització-descriptura-collaborativa"><i class="fa fa-check"></i><b>3.6</b> Explorar wikimedia per a la realització d’escriptura col·laborativa<span></span></a></li>
+<li class="chapter" data-level="3.6" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#explorar-obsidian"><i class="fa fa-check"></i><b>3.6</b> Explorar <span>Obsidian</span><span></span></a></li>
+<li class="chapter" data-level="3.7" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#explorar-wikimedia-per-a-la-realització-descriptura-collaborativa"><i class="fa fa-check"></i><b>3.7</b> Explorar Wikimedia per a la realització d’escriptura col·laborativa<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html"><i class="fa fa-check"></i><b>4</b> Migració de les fulles web a Hugo<span></span></a>
 <ul>
@@ -186,18 +187,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.3" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#organització-dels-diferents-apartats-de-les-fulles"><i class="fa fa-check"></i><b>4.3</b> Organització dels diferents apartats de les fulles<span></span></a></li>
 <li class="chapter" data-level="4.4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#alternativa-merege-wordpress"><i class="fa fa-check"></i><b>4.4</b> Alternativa, merege WordPress<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html"><i class="fa fa-check"></i><b>5</b> Implantació de projectes exelerarning<span></span></a>
+<li class="chapter" data-level="5" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html"><i class="fa fa-check"></i><b>5</b> Implantació de projectes Exelearning<span></span></a>
 <ul>
-<li class="chapter" data-level="5.1" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#proposta-dimplantar-donar-cursos-en-la-sala-o-patrocinats-per-la-mateixa"><i class="fa fa-check"></i><b>5.1</b> Proposta d’implantar donar cursos en la sala o patrocinats per la mateixa<span></span></a></li>
-<li class="chapter" data-level="5.2" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#funcionament-dexelearning"><i class="fa fa-check"></i><b>5.2</b> Funcionament d’exelearning<span></span></a>
+<li class="chapter" data-level="5.1" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#proposta-dimplantar-donar-cursos-en-la-sala-o-patrocinats-per-la-mateixa"><i class="fa fa-check"></i><b>5.1</b> Proposta d’implantar donar cursos en la sala o patrocinats per la mateixa<span></span></a></li>
+<li class="chapter" data-level="5.2" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#funcionament-dexelearning"><i class="fa fa-check"></i><b>5.2</b> Funcionament d’exelearning<span></span></a>
 <ul>
-<li class="chapter" data-level="5.2.1" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#llocs-on-podem-penjar-el-material-educatiu"><i class="fa fa-check"></i><b>5.2.1</b> Llocs on podem penjar el material educatiu<span></span></a></li>
+<li class="chapter" data-level="5.2.1" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#llocs-on-podem-penjar-el-material-educatiu"><i class="fa fa-check"></i><b>5.2.1</b> Llocs on podem penjar el material educatiu<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="5.3" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#possible-implantació-duna-plataforma-moodle"><i class="fa fa-check"></i><b>5.3</b> Possible implantació d’una plataforma Moodle<span></span></a></li>
+<li class="chapter" data-level="5.3" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#possible-implantació-duna-plataforma-moodle"><i class="fa fa-check"></i><b>5.3</b> Possible implantació d’una plataforma Moodle<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html"><i class="fa fa-check"></i><b>6</b> Desenvolupament Appweb<span></span></a>
 <ul>
-<li class="chapter" data-level="6.1" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html#desenvolupament-duna-app-de-gestió-dinformes-de-la-sala."><i class="fa fa-check"></i><b>6.1</b> Desenvolupament d’una app de gestió d’informes de la sala.<span></span></a>
+<li class="chapter" data-level="6.1" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html#desenvolupament-duna-app-de-gestió-dinformes-de-la-sala"><i class="fa fa-check"></i><b>6.1</b> Desenvolupament d’una app de gestió d’informes de la sala<span></span></a>
 <ul>
 <li class="chapter" data-level="6.1.1" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html#alternatives"><i class="fa fa-check"></i><b>6.1.1</b> Alternatives<span></span></a></li>
 </ul></li>
@@ -206,7 +207,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html"><i class="fa fa-check"></i><b>7</b> Remodelat de la fulla web de <em>Espacio Inestable</em><span></span></a>
 <ul>
 <li class="chapter" data-level="7.1" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#reformulació-de-les-estratègies-de-venda-dentrades"><i class="fa fa-check"></i><b>7.1</b> Reformulació de les estratègies de venda d’entrades<span></span></a></li>
-<li class="chapter" data-level="7.2" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-de-pugin-de-venda-dentrades-i-tema-per-a-la-fulla-web"><i class="fa fa-check"></i><b>7.2</b> Instal·lació de pugin de venda d’entrades i tema per a la fulla web<span></span></a></li>
+<li class="chapter" data-level="7.2" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-del-plugin-de-venda-dentrades-i-tema-per-a-la-fulla-web"><i class="fa fa-check"></i><b>7.2</b> Instal·lació del plugin de venda d’entrades i tema per a la fulla web<span></span></a></li>
 <li class="chapter" data-level="7.3" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#tasques-a-fer"><i class="fa fa-check"></i><b>7.3</b> Tasques a fer<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="configuració-del-servidor.html"><a href="configuració-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configuració del servidor<span></span></a>
@@ -240,18 +241,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="implantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre." class="section level2 hasAnchor" number="3.1">
 <h2><span class="header-section-number">3.1</span> Implantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<a href="implantació-dentorn-git.html#implantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre." class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
-<li>Es pot realitzar mitjançant la creació d’un compte en una de les plataformes git que hi ha en internet,</li>
+<li>Es pot realitzar mitjançant la creació d’un compte en una de les plataformes Git que hi ha en internet,</li>
 <li>Configurant un servidor git en el mateix centre de treball
 <ul>
 <li>Git i un servidor web, aquesta opció es per a gastar l’entorn git en consola, no es recomana per a l’empresa.</li>
-<li>Un entorn web , he fet proves en gitlab i gitea, i el final crec que la millor opció és la de gitea pel reduït gaste de recursos que fa i la facilitat d’us.</li>
+<li>Un entorn web, he fet proves en GitLab i Gitea, i el final crec que la millor opció és la de Gitea pel reduït gaste de recursos que fa i la facilitat d’ús.</li>
 <li>Es pot mirar d’enllaçar el repositori git en el conte de drive que té l’empresa, per fer un repositori privat per als membres.</li>
 </ul></li>
 </ul>
 </div>
 <div id="beneficis-de-la-seua-implantació" class="section level2 hasAnchor" number="3.2">
 <h2><span class="header-section-number">3.2</span> Beneficis de la seua implantació<a href="implantació-dentorn-git.html#beneficis-de-la-seua-implantació" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>Els beneficis són els mateixos que per a la creació de projectes informàtics, pero que son poc utilitzat en el món de les lletres. <em>Possibilitat de crear obres col·laboratives.</em></p>
+<p>Els beneficis són els mateixos que per a la creació de projectes informàtics, però que son poc utilitzat en el món de les lletres. <em>Possibilitat de crear obres col·laboratives.</em></p>
 <ul>
 <li>El guardat de les diferents versions segons va desenvolupant-se el projecte, i poder tornar en el temps si alguna cosa no va bé.</li>
 <li>Bifurcar camins d’exploració en la creació literària.</li>
@@ -268,16 +269,21 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>Procés d’instal·lació d’un repositori de git</p>
 <ul>
 <li><p>Git i Apache <code>buscar la fulla on ho explica</code></p></li>
-<li><p>Instal·lació de <a href="https://docs.gitea.io/en-us/">gitea</a> , o bé directament, o per una imatge docker</p></li>
+<li><p>Instal·lació de <a href="https://docs.gitea.io/en-us/">gitea</a> , o bé directament, o per una imatge Docker</p></li>
 <li><p>Servir el <a href="https://www.permikkelsen.dk/how-to-host-your-git-repository-on-onedrive.html">git</a> en un espai onedrive, pareix que és per consola, mirar algun client de git desktop que facilita les coses.</p></li>
 </ul>
 </div>
 <div id="possible-implantació-en-el-repositori-en-internet" class="section level2 hasAnchor" number="3.5">
 <h2><span class="header-section-number">3.5</span> Possible implantació en el repositori en internet<a href="implantació-dentorn-git.html#possible-implantació-en-el-repositori-en-internet" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>El més fàcil seria el traure un comptem en una de les plataformes que hi ha en internet, el problema es el recel que tinga l’empresa pel tema de privacitat. Aquestes plataformes tenen l’opció de crear repositoris privats, on soles es pot connectar al que convideu.</p>
+<p>El més fàcil seria traure un compte en una de les plataformes que hi ha en internet, el problema és el recel que tinga l’empresa pel tema de privacitat. Aquestes plataformes tenen l’opció de crear repositoris privats, on soles es pot connectar al que convideu.</p>
 </div>
-<div id="explorar-wikimedia-per-a-la-realització-descriptura-collaborativa" class="section level2 hasAnchor" number="3.6">
-<h2><span class="header-section-number">3.6</span> Explorar wikimedia per a la realització d’escriptura col·laborativa<a href="implantació-dentorn-git.html#explorar-wikimedia-per-a-la-realització-descriptura-collaborativa" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="explorar-obsidian" class="section level2 hasAnchor" number="3.6">
+<h2><span class="header-section-number">3.6</span> Explorar <a href="https://obsidian.md/">Obsidian</a><a href="implantació-dentorn-git.html#explorar-obsidian" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>Obsidian és un editor de notes en funcions de seguiment git, per veure diff i altres funcions. Prou interessant, o com a alternativa <a href="https://www.zettlr.com/">Zettlr</a>, dona error en posar diccionaris.<br />
+I implantació d’un servidor de <a href="https://github.com/Erikvl87/docker-languagetool">Languagetool</a></p>
+</div>
+<div id="explorar-wikimedia-per-a-la-realització-descriptura-collaborativa" class="section level2 hasAnchor" number="3.7">
+<h2><span class="header-section-number">3.7</span> Explorar Wikimedia per a la realització d’escriptura col·laborativa<a href="implantació-dentorn-git.html#explorar-wikimedia-per-a-la-realització-descriptura-collaborativa" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>L’escriptura col·laborativa mitjançant ferramentes de xarxa, com la Wikipedia, on és possible discutir els convits proposats, obrir discussions sobre el text analitzat. Es pot explorar el concepte de <a href="https://es.wikipedia.org/wiki/Narrativa_hipertextual">Narrativa hipertextual</a> fent servir aquesta ferramenta.</p>
 
 </div>
