--- a/remodelat-de-la-fulla-web-de-espacio-inestable.html
+++ b/remodelat-de-la-fulla-web-de-espacio-inestable.html
@@ -174,7 +174,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="3.4" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#installació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> Instal·lació d’un repositori en el centre<span></span></a></li>
 <li class="chapter" data-level="3.5" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#possible-implantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> Possible implantació en el repositori en internet<span></span></a></li>
-<li class="chapter" data-level="3.6" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#explorar-wikimedia-per-a-la-realització-descriptura-collaborativa"><i class="fa fa-check"></i><b>3.6</b> Explorar wikimedia per a la realització d’escriptura col·laborativa<span></span></a></li>
+<li class="chapter" data-level="3.6" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#explorar-obsidian"><i class="fa fa-check"></i><b>3.6</b> Explorar <span>Obsidian</span><span></span></a></li>
+<li class="chapter" data-level="3.7" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#explorar-wikimedia-per-a-la-realització-descriptura-collaborativa"><i class="fa fa-check"></i><b>3.7</b> Explorar Wikimedia per a la realització d’escriptura col·laborativa<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html"><i class="fa fa-check"></i><b>4</b> Migració de les fulles web a Hugo<span></span></a>
 <ul>
@@ -186,18 +187,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.3" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#organització-dels-diferents-apartats-de-les-fulles"><i class="fa fa-check"></i><b>4.3</b> Organització dels diferents apartats de les fulles<span></span></a></li>
 <li class="chapter" data-level="4.4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#alternativa-merege-wordpress"><i class="fa fa-check"></i><b>4.4</b> Alternativa, merege WordPress<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html"><i class="fa fa-check"></i><b>5</b> Implantació de projectes exelerarning<span></span></a>
+<li class="chapter" data-level="5" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html"><i class="fa fa-check"></i><b>5</b> Implantació de projectes Exelearning<span></span></a>
 <ul>
-<li class="chapter" data-level="5.1" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#proposta-dimplantar-donar-cursos-en-la-sala-o-patrocinats-per-la-mateixa"><i class="fa fa-check"></i><b>5.1</b> Proposta d’implantar donar cursos en la sala o patrocinats per la mateixa<span></span></a></li>
-<li class="chapter" data-level="5.2" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#funcionament-dexelearning"><i class="fa fa-check"></i><b>5.2</b> Funcionament d’exelearning<span></span></a>
+<li class="chapter" data-level="5.1" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#proposta-dimplantar-donar-cursos-en-la-sala-o-patrocinats-per-la-mateixa"><i class="fa fa-check"></i><b>5.1</b> Proposta d’implantar donar cursos en la sala o patrocinats per la mateixa<span></span></a></li>
+<li class="chapter" data-level="5.2" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#funcionament-dexelearning"><i class="fa fa-check"></i><b>5.2</b> Funcionament d’exelearning<span></span></a>
 <ul>
-<li class="chapter" data-level="5.2.1" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#llocs-on-podem-penjar-el-material-educatiu"><i class="fa fa-check"></i><b>5.2.1</b> Llocs on podem penjar el material educatiu<span></span></a></li>
+<li class="chapter" data-level="5.2.1" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#llocs-on-podem-penjar-el-material-educatiu"><i class="fa fa-check"></i><b>5.2.1</b> Llocs on podem penjar el material educatiu<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="5.3" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#possible-implantació-duna-plataforma-moodle"><i class="fa fa-check"></i><b>5.3</b> Possible implantació d’una plataforma Moodle<span></span></a></li>
+<li class="chapter" data-level="5.3" data-path="implantació-de-projectes-exelearning.html"><a href="implantació-de-projectes-exelearning.html#possible-implantació-duna-plataforma-moodle"><i class="fa fa-check"></i><b>5.3</b> Possible implantació d’una plataforma Moodle<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html"><i class="fa fa-check"></i><b>6</b> Desenvolupament Appweb<span></span></a>
 <ul>
-<li class="chapter" data-level="6.1" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html#desenvolupament-duna-app-de-gestió-dinformes-de-la-sala."><i class="fa fa-check"></i><b>6.1</b> Desenvolupament d’una app de gestió d’informes de la sala.<span></span></a>
+<li class="chapter" data-level="6.1" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html#desenvolupament-duna-app-de-gestió-dinformes-de-la-sala"><i class="fa fa-check"></i><b>6.1</b> Desenvolupament d’una app de gestió d’informes de la sala<span></span></a>
 <ul>
 <li class="chapter" data-level="6.1.1" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html#alternatives"><i class="fa fa-check"></i><b>6.1.1</b> Alternatives<span></span></a></li>
 </ul></li>
@@ -206,7 +207,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html"><i class="fa fa-check"></i><b>7</b> Remodelat de la fulla web de <em>Espacio Inestable</em><span></span></a>
 <ul>
 <li class="chapter" data-level="7.1" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#reformulació-de-les-estratègies-de-venda-dentrades"><i class="fa fa-check"></i><b>7.1</b> Reformulació de les estratègies de venda d’entrades<span></span></a></li>
-<li class="chapter" data-level="7.2" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-de-pugin-de-venda-dentrades-i-tema-per-a-la-fulla-web"><i class="fa fa-check"></i><b>7.2</b> Instal·lació de pugin de venda d’entrades i tema per a la fulla web<span></span></a></li>
+<li class="chapter" data-level="7.2" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-del-plugin-de-venda-dentrades-i-tema-per-a-la-fulla-web"><i class="fa fa-check"></i><b>7.2</b> Instal·lació del plugin de venda d’entrades i tema per a la fulla web<span></span></a></li>
 <li class="chapter" data-level="7.3" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#tasques-a-fer"><i class="fa fa-check"></i><b>7.3</b> Tasques a fer<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="configuració-del-servidor.html"><a href="configuració-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configuració del servidor<span></span></a>
@@ -238,18 +239,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h1><span class="header-section-number">Projecte 7</span> Remodelat de la fulla web de <em>Espacio Inestable</em><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#remodelat-de-la-fulla-web-de-espacio-inestable" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <div id="reformulació-de-les-estratègies-de-venda-dentrades" class="section level2 hasAnchor" number="7.1">
 <h2><span class="header-section-number">7.1</span> Reformulació de les estratègies de venda d’entrades<a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#reformulació-de-les-estratègies-de-venda-dentrades" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>L’estratègia de la venda d’entrades, està gestionada per una empresa de venda de events, es planteja la possibilitat de migrar a un altra plataforma o autogestió d’aquestes.</p>
+<p>L’estratègia de la venda d’entrades, és gestionada per una empresa de venda d’actes, es planteja la possibilitat de migrar a una altra plataforma o autogestió d’aquestes.</p>
 </div>
-<div id="installació-de-pugin-de-venda-dentrades-i-tema-per-a-la-fulla-web" class="section level2 hasAnchor" number="7.2">
-<h2><span class="header-section-number">7.2</span> Instal·lació de pugin de venda d’entrades i tema per a la fulla web<a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-de-pugin-de-venda-dentrades-i-tema-per-a-la-fulla-web" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="installació-del-plugin-de-venda-dentrades-i-tema-per-a-la-fulla-web" class="section level2 hasAnchor" number="7.2">
+<h2><span class="header-section-number">7.2</span> Instal·lació del plugin de venda d’entrades i tema per a la fulla web<a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-del-plugin-de-venda-dentrades-i-tema-per-a-la-fulla-web" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>Es recomana d’implementació d’una solució com la que és té en aquesta fulla, on podem veure una demostració de les seues funcions.<a href="https://tickera.com/demos/theater-demo/">ticketera</a></p>
 <p>En aquest plugin per a WordPress, tenim la possibilitat de configurar les nostres entrades, afegint imatge de l’obra, inclusió de codis Qr (per al wifi), implantar la compra d’entrades, amb selecció de la cadira en el pati de butaques.</p>
-<p>S’hauria de contractar els serveis de <a href="https://stripe.com/en-es">stripe</a> , la passerella de cobrament. el <a href="https://stripe.com/en-es/pricing">preu</a> es 1,4% +25€, la configuració en WordPress és molt fàcil, i el tema i el plugin ja estan preparats.</p>
-<p>Una altra part interessant d´aquest plugin, és la possibilitat de validació d’entrades mitjançant un codi Qr, que funciona en una aplicació de mòvil, actualitzant la base de dades d’assistència real a l’acte.</p>
+<p>S’hauria de contractar els serveis de <a href="https://stripe.com/en-es">stripe</a>, la passerella de cobrament. El <a href="https://stripe.com/en-es/pricing">preu</a> és 1,4% +0,25 €, la configuració en WordPress és molt fàcil, i el tema i el plugin ja estan preparats.</p>
+<p>Una altra part interessant d’aquest plugin, és la possibilitat de validació d’entrades mitjançant un codi Qr, que funciona en una aplicació de movil, actualitzant la base de dades d’assistència real a l’acte.</p>
 </div>
 <div id="tasques-a-fer" class="section level2 hasAnchor" number="7.3">
 <h2><span class="header-section-number">7.3</span> Tasques a fer<a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#tasques-a-fer" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>Configurar el tema de la fula web per a que tinga l’aspecte desitjat, es podria comprar també un tema que ofereixen en la mateixa ticketera dissenyat expressament per a <a href="https://tickera.com/demos/theater-demo/">teatres</a> i actes.</p>
+<p>Configurar el tema de la fula web perquè tinga l’aspecte desitjat, es podria comprar també un tema que ofereixen en la mateixa ticketera dissenyat expressament per a <a href="https://tickera.com/demos/theater-demo/">teatres</a> i actes.</p>
 
 </div>
 </div>
