--- a/notes.html
+++ b/notes.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-20" />
+<meta name="date" content="2022-04-29" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -31,7 +31,7 @@
   
   
 <link rel="prev" href="configuració-del-servidor.html"/>
-
+<link rel="next" href="nextcloud.html"/>
 <script src="assets/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="assets/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -160,9 +160,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.1" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#requeriments-per-a-la-seua-implantació"><i class="fa fa-check"></i><b>2.1</b> Requeriments per a la seua implantació<span></span></a>
 <ul>
 <li class="chapter" data-level="2.1.1" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#potència-de-la-connexió-dinternet-per-donar-servei"><i class="fa fa-check"></i><b>2.1.1</b> Potència de la connexió d’internet per donar servei<span></span></a></li>
-<li class="chapter" data-level="2.1.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió"><i class="fa fa-check"></i><b>2.1.2</b> localització dels dispositius de retransmissió<span></span></a></li>
+<li class="chapter" data-level="2.1.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió"><i class="fa fa-check"></i><b>2.1.2</b> Localització dels dispositius de retransmissió<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="2.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#muntatge-1"><i class="fa fa-check"></i><b>2.2</b> Muntatge<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html"><i class="fa fa-check"></i><b>3</b> Implantació d’entorn Git<span></span></a>
 <ul>
@@ -217,6 +216,22 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="9" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>9</b> Notes<span></span></a>
 <ul>
 <li class="chapter" data-level="9.1" data-path="notes.html"><a href="notes.html#recordatoris"><i class="fa fa-check"></i><b>9.1</b> Recordatoris<span></span></a></li>
+</ul></li>
+<li class="chapter" data-level="10" data-path="nextcloud.html"><a href="nextcloud.html"><i class="fa fa-check"></i><b>10</b> Nextcloud<span></span></a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="nextcloud.html"><a href="nextcloud.html#pfsense"><i class="fa fa-check"></i><b>10.1</b> Pfsense<span></span></a></li>
+</ul></li>
+<li class="chapter" data-level="11" data-path="servidor-1.html"><a href="servidor-1.html"><i class="fa fa-check"></i><b>11</b> Servidor<span></span></a>
+<ul>
+<li class="chapter" data-level="11.1" data-path="servidor-1.html"><a href="servidor-1.html#material"><i class="fa fa-check"></i><b>11.1</b> Material<span></span></a></li>
+<li class="chapter" data-level="11.2" data-path="servidor-1.html"><a href="servidor-1.html#avantatges"><i class="fa fa-check"></i><b>11.2</b> Avantatges<span></span></a>
+<ul>
+<li class="chapter" data-level="11.2.1" data-path="servidor-1.html"><a href="servidor-1.html#pfsense-1"><i class="fa fa-check"></i><b>11.2.1</b> Pfsense<span></span></a></li>
+<li class="chapter" data-level="11.2.2" data-path="servidor-1.html"><a href="servidor-1.html#ddns"><i class="fa fa-check"></i><b>11.2.2</b> DDNS<span></span></a></li>
+<li class="chapter" data-level="11.2.3" data-path="servidor-1.html"><a href="servidor-1.html#nextcloud-1"><i class="fa fa-check"></i><b>11.2.3</b> Nextcloud<span></span></a></li>
+</ul></li>
+<li class="chapter" data-level="11.3" data-path="servidor-1.html"><a href="servidor-1.html#accés-point-del-wifi"><i class="fa fa-check"></i><b>11.3</b> Accés point del wifi<span></span></a></li>
+<li class="chapter" data-level="11.4" data-path="servidor-1.html"><a href="servidor-1.html#servidor-de-disc-per-al-video"><i class="fa fa-check"></i><b>11.4</b> Servidor de disc per al video<span></span></a></li>
 </ul></li>
 </ul>
 
@@ -292,8 +307,8 @@ ves en cuidaoooo no se si açò tancara o continua fins el mas enllà :::<br />
           </div>
         </div>
       </div>
-<a href="configuració-del-servidor.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="configuració-del-servidor.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="nextcloud.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="assets/gitbook-2.6.7/js/app.min.js"></script>
@@ -309,8 +324,8 @@ gitbook.require(["gitbook"], function(gitbook) {
 gitbook.start({
 "sharing": {
 "github": true,
-"facebook": true,
-"twitter": true,
+"facebook": false,
+"twitter": false,
 "linkedin": false,
 "weibo": false,
 "instapaper": false,
