--- a/installació-de-wifi-per-al-pati-de-butaques.html
+++ b/installació-de-wifi-per-al-pati-de-butaques.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-20" />
+<meta name="date" content="2022-04-29" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -160,9 +160,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.1" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#requeriments-per-a-la-seua-implantació"><i class="fa fa-check"></i><b>2.1</b> Requeriments per a la seua implantació<span></span></a>
 <ul>
 <li class="chapter" data-level="2.1.1" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#potència-de-la-connexió-dinternet-per-donar-servei"><i class="fa fa-check"></i><b>2.1.1</b> Potència de la connexió d’internet per donar servei<span></span></a></li>
-<li class="chapter" data-level="2.1.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió"><i class="fa fa-check"></i><b>2.1.2</b> localització dels dispositius de retransmissió<span></span></a></li>
+<li class="chapter" data-level="2.1.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió"><i class="fa fa-check"></i><b>2.1.2</b> Localització dels dispositius de retransmissió<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="2.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#muntatge-1"><i class="fa fa-check"></i><b>2.2</b> Muntatge<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html"><i class="fa fa-check"></i><b>3</b> Implantació d’entorn Git<span></span></a>
 <ul>
@@ -218,6 +217,22 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="9.1" data-path="notes.html"><a href="notes.html#recordatoris"><i class="fa fa-check"></i><b>9.1</b> Recordatoris<span></span></a></li>
 </ul></li>
+<li class="chapter" data-level="10" data-path="nextcloud.html"><a href="nextcloud.html"><i class="fa fa-check"></i><b>10</b> Nextcloud<span></span></a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="nextcloud.html"><a href="nextcloud.html#pfsense"><i class="fa fa-check"></i><b>10.1</b> Pfsense<span></span></a></li>
+</ul></li>
+<li class="chapter" data-level="11" data-path="servidor-1.html"><a href="servidor-1.html"><i class="fa fa-check"></i><b>11</b> Servidor<span></span></a>
+<ul>
+<li class="chapter" data-level="11.1" data-path="servidor-1.html"><a href="servidor-1.html#material"><i class="fa fa-check"></i><b>11.1</b> Material<span></span></a></li>
+<li class="chapter" data-level="11.2" data-path="servidor-1.html"><a href="servidor-1.html#avantatges"><i class="fa fa-check"></i><b>11.2</b> Avantatges<span></span></a>
+<ul>
+<li class="chapter" data-level="11.2.1" data-path="servidor-1.html"><a href="servidor-1.html#pfsense-1"><i class="fa fa-check"></i><b>11.2.1</b> Pfsense<span></span></a></li>
+<li class="chapter" data-level="11.2.2" data-path="servidor-1.html"><a href="servidor-1.html#ddns"><i class="fa fa-check"></i><b>11.2.2</b> DDNS<span></span></a></li>
+<li class="chapter" data-level="11.2.3" data-path="servidor-1.html"><a href="servidor-1.html#nextcloud-1"><i class="fa fa-check"></i><b>11.2.3</b> Nextcloud<span></span></a></li>
+</ul></li>
+<li class="chapter" data-level="11.3" data-path="servidor-1.html"><a href="servidor-1.html#accés-point-del-wifi"><i class="fa fa-check"></i><b>11.3</b> Accés point del wifi<span></span></a></li>
+<li class="chapter" data-level="11.4" data-path="servidor-1.html"><a href="servidor-1.html#servidor-de-disc-per-al-video"><i class="fa fa-check"></i><b>11.4</b> Servidor de disc per al video<span></span></a></li>
+</ul></li>
 </ul>
 
       </nav>
@@ -239,21 +254,25 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h1><span class="header-section-number">Projecte 2</span> Instal·lació de wifi per al pati de butaques<a href="installació-de-wifi-per-al-pati-de-butaques.html#installació-de-wifi-per-al-pati-de-butaques" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <div id="requeriments-per-a-la-seua-implantació" class="section level2 hasAnchor" number="2.1">
 <h2><span class="header-section-number">2.1</span> Requeriments per a la seua implantació<a href="installació-de-wifi-per-al-pati-de-butaques.html#requeriments-per-a-la-seua-implantació" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>Uns repetidors de wifi, he quedat en un amic que controla del tema per a mirar-ho. S’haguera de pensar si realment es vol instal·lar per tindre cobertura per als 92 espectadors, o es pensa que no tots es connectaran, i començar per un sistema bàsic, ampliable a mesura que augmenten les necessitats.</p>
+<p>Uns repetidors de wifi. S’haguera de pensar si realment es vol instal·lar per tindre cobertura per als 92 espectadors, o es pensa que no tots es connectaran, i començar per un sistema bàsic, ampliable a mesura que augmenten les necessitats. I si es posa, donar-li més ús, no sol accés a internet.</p>
 <div id="potència-de-la-connexió-dinternet-per-donar-servei" class="section level3 hasAnchor" number="2.1.1">
 <h3><span class="header-section-number">2.1.1</span> Potència de la connexió d’internet per donar servei<a href="installació-de-wifi-per-al-pati-de-butaques.html#potència-de-la-connexió-dinternet-per-donar-servei" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>Es requereix que l’amplada de banda de la connexió d’internet puga donar servei almenys a 92 espectadors, que es l’afore del pati de butaques.</p>
-<p>S’ha de limitar l’amplada de banda que oferim als espectadors en cas de realitzar el streaming al mateix temps, açò ho realitzem assegurant l’amplada de banda en la xarxa del circuit d’imatge. En el switch.</p>
+<p>Es requereix que l’amplada de banda de la connexió d’internet puga donar servei almenys a 92 espectadors, que se l’afore del pati de butaques.</p>
+<p>S’ha de limitar l’amplada de banda que oferim als espectadors en cas de realitzar la reproducció en línia al mateix temps, açò ho realitzem assegurant l’amplada de banda en la xarxa del circuit d’imatge. En el commutador.
+Es recomana contractar una connexió d’amplada de banda minima 300Mb.</p>
 </div>
 <div id="localització-dels-dispositius-de-retransmissió" class="section level3 hasAnchor" number="2.1.2">
-<h3><span class="header-section-number">2.1.2</span> localització dels dispositius de retransmissió<a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>Hem d’estudiar el número i posicions en la sala perquè la retransmissió siga òptima.</p>
-</div>
-</div>
-<div id="muntatge-1" class="section level2 hasAnchor" number="2.2">
-<h2><span class="header-section-number">2.2</span> Muntatge<a href="installació-de-wifi-per-al-pati-de-butaques.html#muntatge-1" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p><code>Aci descriure com es realitza l'instal·lacio i els components necessaris.</code></p>
+<h3><span class="header-section-number">2.1.2</span> Localització dels dispositius de retransmissió<a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>Hem d’estudiar el número i posicions en la sala perquè la retransmissió siga òptima.
+En principi si l’antena és bona, en una en l’entrada de la sala d’actes, seria suficient, o en el sostre, damunt l’escenari.
+Pero en ser una casa vella de parets immenses, segur hi ha problemes, per a tot l’espai. Es poden posar altres no tan potents, no han de donar servei per a tanta gent.
+## Muntatge</p>
+<p>Antena, una d’aquestes de <a href="https://ui.com/wi-fi">Unifi</a>, recomane U6 Professional, pero no sé en les parets tan grans que hi ha en la sala, valdrà un sol per a tot l’espai. Es pot posar un altre repetidor sol per al despatx.
+La idea és fer dues xarxes, una per al públic, en accés a internet i al servidor web intern de promocions, i una altra que tinga accés a la xarxa de l’oficina i recursos del servidor, que podem utilitzar perquè el centre de llums comunique en el servidor de fitxers, utilitzar camera del movil en espectacles, i xat intern.</p>
+<p>Les antenes propostes són PoE, les alimentarem amb el switch, en portar cable de xarxa ja ho tenim.</p>
+<p><a href="https://www.ui.com/download/unifi/default/default/unifi-dream-router-datasheet">Software i documentació</a>, posar-lo en una VM, en el servidor</p>
 
+</div>
 </div>
 </div>
             </section>
@@ -278,8 +297,8 @@ gitbook.require(["gitbook"], function(gitbook) {
 gitbook.start({
 "sharing": {
 "github": true,
-"facebook": true,
-"twitter": true,
+"facebook": false,
+"twitter": false,
 "linkedin": false,
 "weibo": false,
 "instapaper": false,
