--- a/streaming.html
+++ b/streaming.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-20" />
+<meta name="date" content="2022-04-29" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -160,9 +160,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.1" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#requeriments-per-a-la-seua-implantació"><i class="fa fa-check"></i><b>2.1</b> Requeriments per a la seua implantació<span></span></a>
 <ul>
 <li class="chapter" data-level="2.1.1" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#potència-de-la-connexió-dinternet-per-donar-servei"><i class="fa fa-check"></i><b>2.1.1</b> Potència de la connexió d’internet per donar servei<span></span></a></li>
-<li class="chapter" data-level="2.1.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió"><i class="fa fa-check"></i><b>2.1.2</b> localització dels dispositius de retransmissió<span></span></a></li>
+<li class="chapter" data-level="2.1.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió"><i class="fa fa-check"></i><b>2.1.2</b> Localització dels dispositius de retransmissió<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="2.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#muntatge-1"><i class="fa fa-check"></i><b>2.2</b> Muntatge<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html"><i class="fa fa-check"></i><b>3</b> Implantació d’entorn Git<span></span></a>
 <ul>
@@ -218,6 +217,22 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="9.1" data-path="notes.html"><a href="notes.html#recordatoris"><i class="fa fa-check"></i><b>9.1</b> Recordatoris<span></span></a></li>
 </ul></li>
+<li class="chapter" data-level="10" data-path="nextcloud.html"><a href="nextcloud.html"><i class="fa fa-check"></i><b>10</b> Nextcloud<span></span></a>
+<ul>
+<li class="chapter" data-level="10.1" data-path="nextcloud.html"><a href="nextcloud.html#pfsense"><i class="fa fa-check"></i><b>10.1</b> Pfsense<span></span></a></li>
+</ul></li>
+<li class="chapter" data-level="11" data-path="servidor-1.html"><a href="servidor-1.html"><i class="fa fa-check"></i><b>11</b> Servidor<span></span></a>
+<ul>
+<li class="chapter" data-level="11.1" data-path="servidor-1.html"><a href="servidor-1.html#material"><i class="fa fa-check"></i><b>11.1</b> Material<span></span></a></li>
+<li class="chapter" data-level="11.2" data-path="servidor-1.html"><a href="servidor-1.html#avantatges"><i class="fa fa-check"></i><b>11.2</b> Avantatges<span></span></a>
+<ul>
+<li class="chapter" data-level="11.2.1" data-path="servidor-1.html"><a href="servidor-1.html#pfsense-1"><i class="fa fa-check"></i><b>11.2.1</b> Pfsense<span></span></a></li>
+<li class="chapter" data-level="11.2.2" data-path="servidor-1.html"><a href="servidor-1.html#ddns"><i class="fa fa-check"></i><b>11.2.2</b> DDNS<span></span></a></li>
+<li class="chapter" data-level="11.2.3" data-path="servidor-1.html"><a href="servidor-1.html#nextcloud-1"><i class="fa fa-check"></i><b>11.2.3</b> Nextcloud<span></span></a></li>
+</ul></li>
+<li class="chapter" data-level="11.3" data-path="servidor-1.html"><a href="servidor-1.html#accés-point-del-wifi"><i class="fa fa-check"></i><b>11.3</b> Accés point del wifi<span></span></a></li>
+<li class="chapter" data-level="11.4" data-path="servidor-1.html"><a href="servidor-1.html#servidor-de-disc-per-al-video"><i class="fa fa-check"></i><b>11.4</b> Servidor de disc per al video<span></span></a></li>
+</ul></li>
 </ul>
 
       </nav>
@@ -243,11 +258,14 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h2><span class="header-section-number">1.1</span> Materials<a href="streaming.html#materials" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><em>Es requeriria</em></p>
 <ol style="list-style-type: decimal">
-<li><p><strong>Servidor</strong>, que devia ser un ordinador de sobretaula, que es miraran els requisits mínims segons el servei que finalment es donen a terme.</p></li>
-<li><p><strong>Un servidor de disc</strong>, que podria ser el servidor dels altres apartats per guardar una còpia de les diferents càmeres. Si hi ha pressupost, es faria un <a href="https://ca.wikipedia.org/wiki/RAID">RAID</a>.</p></li>
+<li><p><strong>Servidor</strong>, podria ser un ordinador de sobretaula, es pot mirar el que es gasta ara per a la venda d’entrades, per veure si compleix els requisits mínims per als serveis que finalment es volen donar, o un servidor dedicat, on centralitzem tots els serveis. (Comentaré aquest cas en l’apartat servidor)</p></li>
+<li><p><strong>Un servidor de disc</strong>, que podria ser el servidor dels altres apartats per guardar una còpia de les diferents càmeres. Si hi ha pressupost, es faria un <a href="https://ca.wikipedia.org/wiki/RAID">RAID 5</a>.</p></li>
 <li><p><strong>Càmeres ip</strong> i millors <strong>micròfons</strong> que envien el so per la connexió de xarxa de la càmera.</p></li>
-<li><p><a href="https://www.vadavo.com/blog/switch-poe-que-es-y-que-tipos-hay/"><strong>Switch</strong></a> <a href="https://ca.wikipedia.org/wiki/Power_over_Ethernet"><strong>PoE</strong></a> , es podria posar una de 4 ports en l’escenari, per a felicitar l’escalat posterior del projecte que no són massa cars, i un switch (aquest no PoE) en les oficines per centralitzar la xarxa. i tirar cable entre ells i les càmeres. Reduint la distància del PoE a les càmeres ip.</p></li>
-<li><p><strong>Conte</strong> en una plataforma de streaming.</p></li>
+<li><p><a href="https://www.vadavo.com/blog/switch-poe-que-es-y-que-tipos-hay/"><strong>Switch</strong></a> <a href="https://ca.wikipedia.org/wiki/Power_over_Ethernet"><strong>PoE</strong></a>, es podria posar una de 4 ports en l’escenari, per a facilitar l’escalat posterior del projecte que no són massa cars, i un switch (aquest no PoE) en les oficines per centralitzar la xarxa. Tirar cable entre ells i les càmeres. Reduint la distància del PoE a les càmeres ip.
+::: {.rmdtip data-latex=“{Consell}”}
+Examinat la distribució del teatre, el millor és fer una topologia senzilla de la xarxa, Posar un switch i el servidor, en el quarto de les llums que està centrat, seria un bon joc, i d’alli traure cables a la resta dels departaments.
+:::</p></li>
+<li><p><strong>Conte</strong> en una plataforma de streaming de l’elecció de la sala, youtube, <a href="https://www.twitch.tv/">twitch</a>.</p></li>
 <li><p><strong>Programa de streaming</strong> (OBS, Livestream Studio, Wirecast, vMix, mimoLive o Tricaster) alternatives gratuïtes.</p></li>
 <li><p>Un ordinador o portàtil que duga a terme les tasques de <strong>producció</strong>, podria ser un dels ordinadors de l’empresa que gasta per a disseny, s’utilitzaria en el moment de fer la producció en viu. Per a fer streaming d’una obra editada a posteriori, de les còpies fetes en el servidor de disc, no faria falta.</p></li>
 </ol>
@@ -364,8 +382,8 @@ gitbook.require(["gitbook"], function(gitbook) {
 gitbook.start({
 "sharing": {
 "github": true,
-"facebook": true,
-"twitter": true,
+"facebook": false,
+"twitter": false,
 "linkedin": false,
 "weibo": false,
 "instapaper": false,
